--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="./style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap">
     <title>Happy Birthday</title>
@@ -19,7 +19,8 @@
             background-size: 100% 100%;
         }
     </style>
-    <img id="letterImage" src="letter-image.jpg" alt="Letter">
+    <img id="letterImage" src="letter-image-removebg-preview.png" alt="Letter">
+
     <div id="content" class="card">
         <img src="./birthday.svg" alt="birthday" class="birthday">
         <div class="text">
@@ -33,8 +34,13 @@
         </div>
         <div class="space"></div>
         <button id="bt" class="button" onclick="myFunction()"></onclick=>❤️️</button>
-
     </div>
+
+
+    <button id="btnPlay">ấn vào đây điiiiii</button>
+    <video id="video" controls>
+        <source src="y2mate.com - Quê tôi  Remix  Thùy Chi  Nhạc Hay Remix Hot TikTok 2021_1080p copy.mp4" type="video/mp4">
+    </video>
     <script src="script.js"></script>
 </body>
 
